--- a/src/app/components/Button/button.component.css
+++ b/src/app/components/Button/button.component.css
@@ -14,6 +14,14 @@
   border-radius: 6.25rem;
   text-transform: uppercase;
   cursor: pointer;
+
+  transition: all 200ms ease-in-out;
+}
+
+.app-button:disabled {
+  cursor: not-allowed;
+  opacity: .7;
+
 }
 
 .app-button.text {
