--- a/src/app/features/cards-list/view/card-list/card-list.component.css
+++ b/src/app/features/cards-list/view/card-list/card-list.component.css
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  
 }
 
 .exchange-rate h2 {
@@ -55,7 +56,25 @@
   background-color: rgba(244, 244, 244, 1);
   height: max-content;
 
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr;
   gap: 1rem;
+}
+
+@media (min-width: 768px) {
+  .cards-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 1024px) {
+  .cards-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 1440px) {
+  .cards-container {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
